misalignment fix

--- a/Phase2/infosec/assets/styles/layout.less
+++ b/Phase2/infosec/assets/styles/layout.less
@@ -217,7 +217,7 @@ body{
     	width:70%;
     	height:100%;
     	font-size:13pt;
-    	margin: 20px 0px 10px 0px;
+    	margin: 10px 0px 10px 0px;
 		white-space: initial; 
 		/* Below code enforces a multi-line ellipses */
 	       overflow: hidden;
